--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -138,15 +138,15 @@ Web Apps leverages Templates to develop entire content-rich, data-driven website
 
 Not having to write any C# code or perform any app builds dramatically reduces the cognitive overhead and conceptual knowledge required for development where the only thing front-end Web developers need to know is [Template's syntax](http://templates.servicestack.net/docs/syntax) and what [filters are available](http://templates.servicestack.net/docs/filters-reference) to call. Because of Template's high-fidelity with JavaScript, developing a Website with Templates will be instantly familiar to JavaScript developers despite calling and binding directly to .NET APIs behind the scenes.
 
-All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/ServiceStack/Web) .NET Core 2.0 executable and configure a simple [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile), or just the `web.settings` if you're using an S3 or Azure Virtual File System.
+All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/ServiceStack/Web) .NET Core 2.0 executable and configure a simple [app.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/rockwind-aws/blob/master/Dockerfile), or just the `app.settings` if you're using an S3 or Azure Virtual File System.
 
 ### Rapid Development Workflow
 
-The iterative development experience is also unparalleled for a .NET App, no compilation is required so you can just leave the `web/app.dll` running whilst you add the template `.html` files needed to build your App and thanks to the built-in [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) support, pages will refresh automatically as you save. You'll just need to do a full page refresh when modifying external .css/.js files to bypass the browser's cache and you'll need to restart `web/app.dll` to pick up any changes to your `web.settings` or .dlls to your `/plugins` folder.
+The iterative development experience is also unparalleled for a .NET App, no compilation is required so you can just leave the `web/app.dll` running whilst you add the template `.html` files needed to build your App and thanks to the built-in [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) support, pages will refresh automatically as you save. You'll just need to do a full page refresh when modifying external .css/.js files to bypass the browser's cache and you'll need to restart `web/app.dll` to pick up any changes to your `app.settings` or .dlls to your `/plugins` folder.
 
 ### Pure Cloud Apps
 
-Web Apps also enable the development of [Pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) where the same Web App can be developed and run entirely on **AWS S3 and RDS** or **Azure Blob Storage and SQL Server** by just changing the `web.settings` that's deployed with the pre-compiled [Web App Binary](https://github.com/ServiceStack/Web).
+Web Apps also enable the development of [Pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) where the same Web App can be developed and run entirely on **AWS S3 and RDS** or **Azure Blob Storage and SQL Server** by just changing the `app.settings` that's deployed with the pre-compiled [Web App Binary](https://github.com/ServiceStack/Web).
 
 ## Example Web Apps 
 
@@ -191,7 +191,7 @@ title: About Us
 Template's syntax is also the ideal way to convey variable substitution, e.g: `{% raw %}<title>{{ title }}</title>{% endraw %}`
 and even embedding a partial reads like english `{% raw %}{{ 'menu' | partial }}{% endraw %}` which is both intuitive and works well with GUI HTML designers.
 
-#### [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings)
+#### [app.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings)
 
 Below is the `app.settings` for a Basic App:
 
@@ -203,7 +203,7 @@ name Bare WebApp
 > `debug true` controls the level of internal diagnostics available and whether or not [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) is enabled. 
 
 ### Redis Web App
-> source [/RedisHtml](https://github.com/NetCoreWebApps/RedisHtml) - demo [redis-html.web-app.io](http://redis-html.web-app.io)
+> source [/RedisHtml](https://github.com/NetCoreWebApps/redis-html) - demo [redis-html.web-app.io](http://redis-html.web-app.io)
 
 For the Redis Browser Web App, we wanted to implement an App that was an ideal candidate for a Single Page App but constrain ourselves to do all HTML rendering on the server and have each interaction request a full-page reload to see how a traditional server-generated Web App feels like with the performance of .NET Core 2.0 and Templates. We're pleasantly surprised with the result as when the App is run locally the responsiveness is effectively indistinguishable from an Ajax App. When hosted on the Internet there is a sub-second delay which causes a noticeable flicker but it still retains a pleasant UX that's faster than most websites.
 
@@ -216,15 +216,15 @@ We've had a sordid history developing Redis UI's which we're built using the pop
 
 #### Beautiful, succinct, declarative code
 
-The nice thing about generating HTML is that it's the one true constant in Web development that will always be there. The entire functionality for the Redis Web App is contained in a single [/RedisHtml/index.html](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/index.html) which includes
+The nice thing about generating HTML is that it's the one true constant in Web development that will always be there. The entire functionality for the Redis Web App is contained in a single [/RedisHtml/index.html](https://github.com/NetCoreWebApps/redis-html/blob/master/index.html) which includes
 all Template and JavaScript Source Code in **< 200 lines** which also includes all as server logic as it doesn't rely on any back-end Services and just uses the [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to interface with Redis directly.
-The [source code](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/index.html) also serves as a good demonstration of the declarative coding style that Templates encourages that in addition to being highly-readable requires orders of magnitude less code than our previous Redis JavaScript SPA's with a comparable feature-set.
+The [source code](https://github.com/NetCoreWebApps/redis-html/blob/master/index.html) also serves as a good demonstration of the declarative coding style that Templates encourages that in addition to being highly-readable requires orders of magnitude less code than our previous Redis JavaScript SPA's with a comparable feature-set.
 
 Having a much smaller code-base makes it much easier to maintain and enhance whilst being less susceptible to becoming obsolete by the next new JavaScript framework as it would only require rewriting 75 lines of JavaScript instead of the complete rewrite that would be required to convert the existing JavaScript Apps to a use different JavaScript fx.
 
-#### [web.settings](https://github.com/NetCoreWebApps/RedisHtml/blob/master/app/web.settings)
+#### [app.settings](https://github.com/NetCoreWebApps/redis-html/blob/master/app.settings)
 
-The `web.settings` for Redis is similar to Web App Starter above except it adds a `redis.connection`
+The `app.settings` for Redis is similar to Web App Starter above except it adds a `redis.connection`
 to configure a [RedisManagerPool](https://github.com/ServiceStack/ServiceStack.Redis#redismanagerpool) at the [connection string](https://github.com/ServiceStack/ServiceStack.Redis#redis-connection-strings) provided as well as [Redis Filters](http://templates.servicestack.net/docs/redis-filters) to give Templates access to the Redis instance.
 
 ```
@@ -238,19 +238,19 @@ redis.connection localhost:6379
 
 ### Rockwind
 
-> source [/Rockwind](https://github.com/NetCoreWebApps/Rockwind) - demo [rockwind-sqlite.web-app.io](http://rockwind-sqlite.web-app.io)
+> source [/Rockwind](https://github.com/NetCoreWebApps/rockwind) - demo [rockwind-sqlite.web-app.io](http://rockwind-sqlite.web-app.io)
 
 The Rockwind website shows an example of combining multiple websites in a single Web App by having them separated in different folders - a **`Rock`stars** Content Website and a dynamic data-driven UI for the **North`wind`** database which can run against either SQL Server, MySql or SQLite database using just configuration. It also includes [API Pages](http://templates.servicestack.net/docs/api-pages) examples for rapidly developing Web APIs.
 
 #### Rockstars
 
-[/rockstars](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/rockstars) is an example of a Content Website that maintains multiple sub sections itself, each with their own layouts - [/rockstars/alive](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/rockstars/alive) for living Rockstars and [/rockstars/dead](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/rockstars/dead) for those that have died. Each Rockstar maintains their own encapsulated [mix of HTML, markdown content and splash image](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/rockstars/alive/grohl) that intuitively uses the closest `_layout.html`, `content.md` and `splash.jpg` from the page they're referenced from. This approach makes it easy to move entire sub sections over by just moving a folder and it will automatically use the relevant layout and partials of its parent.
+[/rockstars](https://github.com/NetCoreWebApps/rockwind/tree/master/rockstars) is an example of a Content Website that maintains multiple sub sections itself, each with their own layouts - [/rockstars/alive](https://github.com/NetCoreWebApps/rockwind/tree/master/rockstars/alive) for living Rockstars and [/rockstars/dead](https://github.com/NetCoreWebApps/rockwind/tree/master/rockstars/dead) for those that have died. Each Rockstar maintains their own encapsulated [mix of HTML, markdown content and splash image](https://github.com/NetCoreWebApps/rockwind/tree/master/rockstars/alive/grohl) that intuitively uses the closest `_layout.html`, `content.md` and `splash.jpg` from the page they're referenced from. This approach makes it easy to move entire sub sections over by just moving a folder and it will automatically use the relevant layout and partials of its parent.
 
 [![](http://templates.servicestack.net/assets/img/screenshots/rockwind.png)](http://rockwind-sqlite.web-app.io)
 
 #### Northwind
 
-[/northwind](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/northwind) is an example of a dynamic UI for a database containing a [form to filter results](http://rockwind-sqlite.web-app.io/northwind/customers?country=Germany), multi-nested [detail pages](http://rockwind-sqlite.web-app.io/northwind/customer?id=ALFKI) and [deep-linking](http://rockwind-sqlite.web-app.io/northwind/order?id=10643) for quickly navigating between referenced data. Templates is also a great solution for rapidly developing Web APIs where the [/api/customers.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/api/customers.html) API Page below:
+[/northwind](https://github.com/NetCoreWebApps/rockwind/tree/master/northwind) is an example of a dynamic UI for a database containing a [form to filter results](http://rockwind-sqlite.web-app.io/northwind/customers?country=Germany), multi-nested [detail pages](http://rockwind-sqlite.web-app.io/northwind/customer?id=ALFKI) and [deep-linking](http://rockwind-sqlite.web-app.io/northwind/order?id=10643) for quickly navigating between referenced data. Templates is also a great solution for rapidly developing Web APIs where the [/api/customers.html](https://github.com/NetCoreWebApps/rockwind/blob/master/api/customers.html) API Page below:
 
 ```js
 {% raw  %}
@@ -350,7 +350,7 @@ The [/support/northwind-data](https://github.com/ServiceStack/dotnet-app/tree/ma
 #### [web.azure.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings)
 
 The example Azure configuration is also configured to use a different Virtual File System where instead of sourcing Web App files from the filesystem they're sourced from an [Azure Blob Container](https://docs.microsoft.com/en-us/azure/storage/blobs/storage-dotnet-how-to-use-blobs).
-In this case we're not using any files from the App so we don't need to set a `contentRoot` or `webRoot` path. This also means for deployment we're just deploying the [WebApp](https://github.com/ServiceStack/Web) binary along with [web.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings) since both Web App files and database are sourced remotely from managed Azure services.
+In this case we're not using any files from the App so we don't need to set a `contentRoot` or `webRoot` path. This also means for deployment we're just deploying the [WebApp](https://github.com/ServiceStack/Web) binary along with [app.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings) since both Web App files and database are sourced remotely from managed Azure services.
 
 #### Upload Rockwind files to your Azure Blob Storage Container
 
@@ -361,7 +361,7 @@ the same configuration in [web.azure.settings](https://github.com/ServiceStack/d
 
 #### Multi-RDBMS SQL
 
-As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to hide the nuances of each database, we need to be more diligent when creating parameterized SQL that works across multiple databases by using the [`sql*` DB Filters](http://templates.servicestack.net/docs/filters-reference?nameContains=sql&amp;tab=db-filters) to avoid using RDBMS-specific SQL syntax. The [/northwind/customer.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/northwind/customer.html) contains a good example containing a number of things to watch out for:
+As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to hide the nuances of each database, we need to be more diligent when creating parameterized SQL that works across multiple databases by using the [`sql*` DB Filters](http://templates.servicestack.net/docs/filters-reference?nameContains=sql&amp;tab=db-filters) to avoid using RDBMS-specific SQL syntax. The [/northwind/customer.html](https://github.com/NetCoreWebApps/rockwind/blob/master/northwind/customer.html) contains a good example containing a number of things to watch out for:
 
 ```js
 {% raw %}{{ id | endIfEmpty | useFmt(
@@ -412,13 +412,13 @@ When using a remote file storage like AWS S3 or Azure Blob Storage it's a good i
 <img src="{{ 'splash.jpg' | resolveAsset }}" id="splash" alt="Dave Grohl" />{% endraw %}
 ```
 
-ServiceStack asynchronously writes each file to the Response Stream with the last `Last-Modified` HTTP Header to enable browser caching so it's still a workable solution but for optimal performance you can specify `args.assetsBase` in your web.settings to populate the assetsBase `TemplateContext` Argument the `resolveAsset` filter uses to generate an external URL reference to the remote file, reducing the load and improving the performance of your App, especially when configured to use a CDN.
+ServiceStack asynchronously writes each file to the Response Stream with the last `Last-Modified` HTTP Header to enable browser caching so it's still a workable solution but for optimal performance you can specify `args.assetsBase` in your app.settings to populate the assetsBase `TemplateContext` Argument the `resolveAsset` filter uses to generate an external URL reference to the remote file, reducing the load and improving the performance of your App, especially when configured to use a CDN.
 
 ### AWS Cloud Apps
 
 The AWS settings below shows an example of this where every external resource in [rockwind-aws.web-app.io](http://rockwind-aws.web-app.io) has been replaced with a direct reference to the asset on its configured S3 bucket:
 
-#### [Rockwind.Aws/web.settings](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/app/web.settings)
+#### [Rockwind.Aws/app.settings](https://github.com/NetCoreWebApps/rockwind-aws/blob/master/app.settings)
 
 ```
 # Note: values prefixed with '$' are resolved from Environment Variables
@@ -439,14 +439,14 @@ defaultFileCacheExpirySecs     60
 
 With all files being sourced from S3 and the App configured to use AWS RDS PostgreSQL the entire App is hosted on AWS's managed cloud services that's decoupled from the .NET Core 2.0 binary that runs it that for the most part won't require redeploying unless making configuration changes or upgrading the `web/app.dll` as any App changes can just be uploaded straight to S3 where changes will reflected after `checkForModifiedPagesAfterSecs`, which tells the Web App how long to wait before checking for file changes whilst `defaultFileCacheExpirySecs` specifies how long to cache included files like `content.md`.
 
-#### [DockerFile](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile)
+#### [DockerFile](https://github.com/NetCoreWebApps/rockwind-aws/blob/master/Dockerfile)
 
-Deployments are also greatly simplified as all that's needed is to deploy the WebApp binary and the web.settings of your Cloud App, e.g. This is the DockerFile for [rockwind-aws.web-app.io](http://rockwind-aws.web-app.io) - deployed to AWS ECS using the deployment scripts in [Rockwind.Aws](https://github.com/NetCoreWebApps/Rockwind.Aws) as per our [.NET Core Docker Deployment Guideline](http://docs.servicestack.net/deploy-netcore-docker-aws-ecs):
+Deployments are also greatly simplified as all that's needed is to deploy the WebApp binary and the app.settings of your Cloud App, e.g. This is the DockerFile for [rockwind-aws.web-app.io](http://rockwind-aws.web-app.io) - deployed to AWS ECS using the deployment scripts in [Rockwind.Aws](https://github.com/NetCoreWebApps/rockwind-aws) as per our [.NET Core Docker Deployment Guideline](http://docs.servicestack.net/deploy-netcore-docker-aws-ecs):
 
 ```
 FROM microsoft/dotnet:2.0-sdk
 COPY web /web
-ADD https://raw.githubusercontent.com/NetCoreWebApps/Rockwind.Aws/master/app/web.settings /web/web.settings
+ADD https://raw.githubusercontent.com/NetCoreWebApps/rockwind-aws/master/app.settings /web/app.settings
 WORKDIR /web
 EXPOSE 5000/tcp
 ENV ASPNETCORE_URLS https://*:5000
@@ -457,7 +457,7 @@ ENTRYPOINT ["dotnet", "/web/app.dll"]
 
 We can also create Azure Cloud Apps in the same we've done above for AWS which we've deployed to [rockwind.azurewebsites.net](http://rockwind.azurewebsites.net). It's running the same [/rockwind-vfs](https://github.com/ServiceStack/dotnet-app/tree/master/src/apps/rockwind-vfs) Web App but using an Azure hosted SQL Server database and all its files are hosted on Azure Blob Storage:
 
-#### [Rockwind.Azure/web.settings](https://github.com/NetCoreWebApps/Rockwind.Azure/blob/master/app/web.settings)
+#### [Rockwind.Azure/app.settings](https://github.com/NetCoreWebApps/rockwind-azure/blob/master/app.settings)
 
 ```
 # Note: values prefixed with '$' are resolved from Environment Variables
@@ -476,10 +476,10 @@ checkForModifiedPagesAfterSecs 60
 defaultFileCacheExpirySecs     60
 ```
 
-See [NetCoreWebApps/Rockwind.Azure](https://github.com/NetCoreWebApps/Rockwind.Azure) for a detailed step-by-step guide for deploying Web Apps to Azure.
+See [NetCoreWebApps/rockwind-azure](https://github.com/NetCoreWebApps/rockwind-azure) for a detailed step-by-step guide for deploying Web Apps to Azure.
 
 ### Plugins
-> source [/Plugins](https://github.com/NetCoreWebApps/Plugins) - demo [plugins.web-app.io](http://plugins.web-app.io)
+> source [/Plugins](https://github.com/NetCoreWebApps/plugins) - demo [plugins.web-app.io](http://plugins.web-app.io)
 
 Up till now the Apps above only have only used functionality built into ServiceStack, to enable even greater functionality but still retain all the benefits of developing Web Apps you can drop **.dll's** with custom functionality into your Web App's `/plugins` folder. The plugins support in Web Apps is as frictionless as we could make it, there's no configuration to maintain or special interfaces to implement, you can just drop your **existing implementation .dll's** as-is into the App's `/plugins` folder.
 
@@ -489,7 +489,7 @@ Plugins allow "no touch" sharing of [ServiceStack Plugins](http://docs.servicest
 
 ### Registering ServiceStack Plugins
 
-[ServiceStack Plugins](http://docs.servicestack.net/plugins) can be added to your App by listing it's Type Name in the `features` config entry in [web.settings](https://github.com/NetCoreWebApps/Plugins/tree/master/app/web.settings):
+[ServiceStack Plugins](http://docs.servicestack.net/plugins) can be added to your App by listing it's Type Name in the `features` config entry in [app.settings](https://github.com/NetCoreWebApps/plugins/tree/master/app.settings):
 
 ```
 debug true
@@ -549,9 +549,9 @@ Where as it was first registered in the list will appear before any links regist
 [![](http://plugins.web-app.io/assets/img/metadata-screenshot.png)](http://plugins.web-app.io/metadata)
 
 ### Chat
-> source [/ ](https://github.com/NetCoreWebApps/Plugins) - demo [chat.web-app.io](http://chat.web-app.io)
+> source [/ ](https://github.com/NetCoreWebApps/plugins) - demo [chat.web-app.io](http://chat.web-app.io)
 
-[/Chat](https://github.com/NetCoreWebApps/Chat/tree/master/app) is an example of the ultimate form of extensibility where instead of just being able to add Services, Filters and Plugins, etc. You can add your entire `AppHost` which Web Apps will use instead of its own. This vastly expands the use-cases that can be built with Web Apps as it gives you complete fine-grained control over how your App is configured.
+[/Chat](https://github.com/NetCoreWebApps/chat/tree/master) is an example of the ultimate form of extensibility where instead of just being able to add Services, Filters and Plugins, etc. You can add your entire `AppHost` which Web Apps will use instead of its own. This vastly expands the use-cases that can be built with Web Apps as it gives you complete fine-grained control over how your App is configured.
 
 [![](http://templates.servicestack.net/assets/img/screenshots/chat.png)](http://chat.web-app.io)
 
@@ -560,10 +560,10 @@ Where as it was first registered in the list will appear before any links regist
 For [chat.web-app.io](http://chat.web-app.io) we've taken a copy of the existing .NET Core 2.0 
 [Chat App](https://github.com/NetCoreApps/Chat) and moved its C# code to
 [/example-plugins/Chat](https://github.com/ServiceStack/dotnet-app/tree/master/src/example-plugins/Chat)
-and its files to [/Chat](https://github.com/NetCoreWebApps/Chat/tree/master/app) where it can be developed like any other Web App except it utilizes the Chat AppHost and implementation in the 
+and its files to [/Chat](https://github.com/NetCoreWebApps/chat/tree/master) where it can be developed like any other Web App except it utilizes the Chat AppHost and implementation in the 
 [SelfHost Chat App](https://github.com/ServiceStack/dotnet-app/blob/master/src/example-plugins/Chat/Program.cs).
 
-Customizations from the original [.NET Core Chat implementation](https://github.com/NetCoreApps/Chat/blob/master/src/Chat/Startup.cs) includes removing MVC and Razor dependencies and configuration, extracting its [_layout.html](https://github.com/NetCoreWebApps/Chat/tree/master/app/_layout.html) and converting [index.html](https://github.com/NetCoreWebApps/Chat/tree/master/app/index.html) to use Templates from its original 
+Customizations from the original [.NET Core Chat implementation](https://github.com/NetCoreApps/Chat/blob/master/src/Chat/Startup.cs) includes removing MVC and Razor dependencies and configuration, extracting its [_layout.html](https://github.com/NetCoreWebApps/chat/tree/master/_layout.html) and converting [index.html](https://github.com/NetCoreWebApps/chat/tree/master/index.html) to use Templates from its original 
 [default.cshtml](https://github.com/NetCoreApps/Chat/blob/master/src/Chat/wwwroot/default.cshtml). It's also been enhanced with the ability to evaluate Templates from the Chat window, as seen in the screenshot above.
 
 #### Chat AppHost
@@ -574,7 +574,7 @@ public class Startup
     public void Configure(IApplicationBuilder app, IHostingEnvironment env, ILoggerFactory loggerFactory)
     {
         loggerFactory.AddConsole();
-        var appSettings = new TextFileSettings("~/../../apps/chat/web.settings".MapProjectPath());
+        var appSettings = new TextFileSettings("~/../../apps/chat/app.settings".MapProjectPath());
         app.UseServiceStack(new AppHost(appSettings));
     }
 }
@@ -622,23 +622,23 @@ public class AppHost : AppHostBase
 One nice thing from being able to reuse existing AppHost's is being able to develop all back-end C# Services and Custom Filters as a stand-alone .NET Core Project where it's more productive with access to .NET IDE tooling and debugging.
 
 To account for these 2 modes we use `AddIfNotExists` to only register the `TemplatePagesFeature` plugin 
-when running as a stand-alone App and add an additional constructor so it reuses the existing `web.settings` as its [IAppSettings](http://docs.servicestack.net/appsettings) provider for is custom App configuration like OAuth App keys required for enabling Sign-In's via with Twitter, Facebook and GitHub when running on `http://localhost:5000` as seen in Chat's [web.settings](https://github.com/NetCoreWebApps/Chat/blob/master/app/web.settings).
+when running as a stand-alone App and add an additional constructor so it reuses the existing `app.settings` as its [IAppSettings](http://docs.servicestack.net/appsettings) provider for is custom App configuration like OAuth App keys required for enabling Sign-In's via with Twitter, Facebook and GitHub when running on `http://localhost:5000` as seen in Chat's [app.settings](https://github.com/NetCoreWebApps/chat/blob/master/app.settings).
 
 After the back-end has been implemented we can build and copy the compiled **Chat.dll** into the Chat's 
-[/plugins](https://github.com/NetCoreWebApps/Chat/tree/master/app/plugins) folder where we can take advantage of the improved development experience for rapidly developing its UI.
+[/plugins](https://github.com/NetCoreWebApps/chat/tree/master/plugins) folder where we can take advantage of the improved development experience for rapidly developing its UI.
 
 ### Simplified Web App Deployments
 
-Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `web.settings` and the pre-compiled [Web App binary](https://github.com/ServiceStack/Web). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
+Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `app.settings` and the pre-compiled [Web App binary](https://github.com/ServiceStack/Web). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
 
 To give you an idea of how easy deployments are, after a [one-time setup of supervisor and nginx configuration for each App](http://templates.servicestack.net/docs/deploying-web-apps#setup-supervisor) we deploy all Web Apps above (excl AWS and Azure Cloud Apps which are deployed to AWS/Azure using Docker) in seconds by running [this script](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) below:
 
 ```sh
-cat ../apps/bare/web.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5001/" > ../apps/web/web.bare.settings
-cat ../apps/redis/web.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5002/" > ../apps/web/web.redis.settings
+cat ../apps/bare/app.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5001/" > ../apps/web/web.bare.settings
+cat ../apps/redis/app.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5002/" > ../apps/web/web.redis.settings
 cat ../apps/rockwind/web.sqlite.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5003/" > ../apps/web/web.rockwind-sqlite.settings
 cat ../apps/rockwind-vfs/web.sqlite.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5004/" > ../apps/web/web.rockwind-vfs-sqlite.settings
-cat ../apps/plugins/web.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5005/" > ../apps/web/web.plugins.settings
+cat ../apps/plugins/app.settings | sed "/debug/s/ .*/ false/" | sed "/port/s/ .*/ 5005/" > ../apps/web/web.plugins.settings
 cat ../apps/chat/web.release.settings | sed "/port/s/ .*/ 5006/" > ../apps/web/web.chat.settings
 
 rsync -avz -e 'ssh' ../apps deploy@web-app.io:/home/deploy
@@ -646,7 +646,7 @@ rsync -avz -e 'ssh' ../apps deploy@web-app.io:/home/deploy
 ssh deploy@web-app.io "sudo supervisorctl restart all"
 ```
 
-Which generates deployment `web.settings` from each App's development web.settings by flipping the `debug` flag and configuring each App to run on a different port. `rsync` is then used to incrementally upload just the files that have changed before `supervisorctl` is run remotely to restart all Web Apps. 
+Which generates deployment `app.settings` from each App's development app.settings by flipping the `debug` flag and configuring each App to run on a different port. `rsync` is then used to incrementally upload just the files that have changed before `supervisorctl` is run remotely to restart all Web Apps. 
 
 If prefered you can choose to only restart the App that's changed by replacing the last line with:
 
