--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -875,7 +875,7 @@ Likewise all [.NET Core ServiceStack WebApps](https://github.com/NetCoreWebApps)
 
 Changes from the previous version includes switching to use the default `WebHost.CreateDefaultBuilder()` builder to bootstrap WebApp's letting you use `ASPNETCORE_URLS` to specify which URL and port to bind on, simplifying deployment configurations.
 
-The `ASPNETCORE_ENVIRONMENT` Environment variable can also be used to configure WebApp's to run in `Production` mode. If preferred you can continue using the existing `bind`, `port` and `debug` options in your `web.settings` to override the default configuration. 
+The `ASPNETCORE_ENVIRONMENT` Environment variable can also be used to configure WebApp's to run in `Production` mode. If preferred you can continue using the existing `bind`, `port` and `debug` options in your `app.settings` to override the default configuration. 
 
 ### .NET Core IAppSettings Adapter
 
