--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -2182,7 +2182,7 @@ To quickly view and experiment with OrmLite's different Schema features we've ad
 
 We've further improved the extensibility of Plugins which can now implement .NET Core's `IStartup` to be able to register any required dependencies without any coupling to any Custom AppHost.
 
-To simplify configuration you can use the new `plugins/*` wildcard in [web.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/plugins2/web.settings) at the end of an ordered plugin list to register all remaining Plugins it finds in the apps `/plugins` folder:
+To simplify configuration you can use the new `plugins/*` wildcard in [app.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/plugins2/app.settings) at the end of an ordered plugin list to register all remaining Plugins it finds in the apps `/plugins` folder:
 
     features OpenApiFeature, PostmanFeature, CorsFeature, ValidationFeature, plugins/*
     CustomPlugin { ShowProcessLinks: true }
