--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1615,7 +1615,7 @@ makes it even easier to embed markdown content directly in web pages which works
 ```
 
 Which is now the easiest and preferred way to embed Markdown content in content-rich hybrid web pages like 
-[Razor Rockstars content pages](https://github.com/NetCoreTemplates/templates-webapp/blob/master/app/rockstars/dead/cobain/index.html), 
+[Razor Rockstars content pages](https://github.com/NetCoreTemplates/templates-webapp/blob/master/rockstars/dead/cobain/index.html), 
 or even the [blocks.html WebPage itself](https://github.com/NetCoreApps/TemplatePages/blob/master/src/wwwroot/docs/blocks.html) which 
 makes extensive use of markdown.
 
@@ -1838,7 +1838,7 @@ To recap each page can be requested with or without its **.html** extension:
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/db.html">/db.html</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/db.html">/db.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/db.html">/db.html</a></td>
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/posts/new">/posts/new</a></td>
@@ -1846,7 +1846,7 @@ To recap each page can be requested with or without its **.html** extension:
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/posts/new.html">/posts/new.html</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/new.html">/posts/new.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/posts/new.html">/posts/new.html</a></td>
     </tr>
   </tbody>
 </table>
@@ -1863,11 +1863,11 @@ The default route `/` maps to the `index.html` in the directory if it exists, e.
   <tbody>
     <tr>
       <td><a href="http://blog.web-app.io/">/</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html">/index.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/index.html">/index.html</a></td>
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/index.html">/index.html</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html">/index.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/index.html">/index.html</a></td>
     </tr>
   </tbody>
 </table>
@@ -1889,17 +1889,17 @@ to the arguments name:
   <tbody>
     <tr>
       <td><a href="http://blog.web-app.io/">/ServiceStack</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/_user/index.html">/_user/index.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/_user/index.html">/_user/index.html</a></td>
       <td>user=ServiceStack</td>
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/posts/markdown-example">/posts/markdown-example</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/index.html">/posts/_slug/index.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/posts/_slug/index.html">/posts/_slug/index.html</a></td>
       <td>slug=markdown-example</td>
     </tr>
     <tr>
       <td><a href="http://blog.web-app.io/posts/markdown-example/edit">/posts/markdown-example/edit</a></td>
-      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/edit.html">/posts/_slug/edit.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/blog/blob/master/posts/_slug/edit.html">/posts/_slug/edit.html</a></td>
       <td>slug=markdown-example</td>
     </tr>
   </tbody>
@@ -1932,7 +1932,7 @@ support for Init pages reduces the need even further.
 Just as how `Global.asax.cs` can be used to run Startup initialization logic in ASP.NET Web Applications and `Startup.cs` in .NET Core Apps, 
 you can now add a `/_init.html` page for Templates logic that's only executed once on Startup. 
 
-This is used in the Blog Web App's [_init.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/_init.html) where it will create a new 
+This is used in the Blog Web App's [_init.html](https://github.com/NetCoreWebApps/blog/blob/master/_init.html) where it will create a new 
 `blog.sqlite` database if it doesn't exist seeded with the `UserInfo` and `Posts` Tables and initial data, e.g:
 
 ```hbs
@@ -1964,7 +1964,7 @@ This is used in the Blog Web App's [_init.html](https://github.com/NetCoreWebApp
 ```
 
 The output of the `_init` page is captured in the `initout` argument which can be later inspected as a normal template argument as seen in 
-[log.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/log.html):
+[log.html](https://github.com/NetCoreWebApps/blog/blob/master/log.html):
 
 ```html
 {% raw %}
@@ -2026,7 +2026,7 @@ public class HelloService : Service
 > Usage: /hello/{name}
 
 An API which returns the same wire response as above can be implemented in API Pages by creating a page at 
-[/hello/_name/index.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/hello/_name/index.html) 
+[/hello/_name/index.html](https://github.com/NetCoreWebApps/blog/blob/master/hello/_name/index.html) 
 that includes the 1-liner:
 
 ```hbs
@@ -2058,7 +2058,7 @@ Templates and Dynamic API Pages to implement all of its functionality.
 
 > Usage: /preview?content={templates}
 
-The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/preview.html) API page uses this to force a plain-text response with:
+The [/preview.html](https://github.com/NetCoreWebApps/blog/blob/master/preview.html) API page uses this to force a plain-text response with:
 
 ```hbs
 {% raw %}{{ content  | evalTemplate({use:{plugins:'MarkdownTemplatePlugin'}}) | assignTo:response }}
@@ -2086,7 +2086,7 @@ Which renders the plain text response:
 
 > Usage: /{user}/api
 
-The [/_user/api.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/_user/api.html) API page shows an example of how easy it is to 
+The [/_user/api.html](https://github.com/NetCoreWebApps/blog/blob/master/_user/api.html) API page shows an example of how easy it is to 
 create data-driven APIs where you can literally return the response of a parameterized SQL query using the `dbSelect` filter and returning 
 the results:
 
@@ -2115,7 +2115,7 @@ Which also benefits from ServiceStack's multiple built-in formats where the same
 
 > Usage:  /posts/{slug}/api
 
-The [/posts/_slug/api.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/api.html) page shows an example of using the 
+The [/posts/_slug/api.html](https://github.com/NetCoreWebApps/blog/blob/master/posts/_slug/api.html) page shows an example of using the 
 `httpResult` filter to return a custom HTTP Response where if the post with the specified slug does not exist it will return a 
 `404 Post was not found` HTTP Response:
 
@@ -2155,7 +2155,7 @@ Returning the `httpResult` above behaves similarly to customizing a HTTP respons
 
 Using the explicit `httpResult` filter is useful for returning a custom HTTP Response without a Response Body, e.g. the **New Post** page 
 uses `httpFilter` to 
-[redirect back to the Users posts page](https://github.com/NetCoreWebApps/Blog/blob/e8bb7249192c5797348ced091ad5fd434db9a619/app/posts/new.html#L33) 
+[redirect back to the Users posts page](https://github.com/NetCoreWebApps/blog/blob/e8bb7249192c5797348ced091ad5fd434db9a619/app/posts/new.html#L33) 
 after they've successfully created a new Post:
 
 ```hbs
@@ -2312,7 +2312,7 @@ This release also includes a number of new features which makes Web Apps even mo
 
 ### Customizable Auth Providers
 
-Authentication can now be configured using plain text config in your `web.settings` where initially you need register the `AuthFeature` 
+Authentication can now be configured using plain text config in your `app.settings` where initially you need register the `AuthFeature` 
 [plugin as normal](http://templates.servicestack.net/docs/web-apps#registering-servicestack-plugins) by specifying it in the `features` list:
 
     features AuthFeature
@@ -2321,7 +2321,7 @@ Then using `AuthFeature.AuthProviders` you can specify which Auth Providers you 
 
     AuthFeature.AuthProviders TwitterAuthProvider, GithubAuthProvider
 
-Each Auth Provider checks the Web Apps `web.settings` for its Auth Provider specific configuration it needs, e.g. to configure both 
+Each Auth Provider checks the Web Apps `app.settings` for its Auth Provider specific configuration it needs, e.g. to configure both 
 Twitter and GitHub Auth Providers you would populate it with your [OAuth Apps details](http://docs.servicestack.net/authentication-and-authorization#oauth-configuration):
 
     oauth.RedirectUrl http://127.0.0.1:5000/
@@ -2345,7 +2345,7 @@ markdownProvider MarkdownDeep
 
 ### Rich Template Config Arguments
 
-Any `web.settings` configs that are prefixed with `args.` are made available to Template Pages and any arguments starting with 
+Any `app.settings` configs that are prefixed with `args.` are made available to Template Pages and any arguments starting with 
 a `{` or `[` are automatically converted into a JS object:
 
 ```
@@ -2502,7 +2502,7 @@ See the [Deploying Web Apps](http://templates.servicestack.net/docs/deploying-we
 ## New Blog Web App
 
 As we like to do when introducing new major features, we've created a new Live Demo to showcase many of the new features added to Templates.
-[Exploring the source code of Live Demos](https://github.com/NetCoreWebApps/Blog/tree/master/app) helps learning how to make use of new features 
+[Exploring the source code of Live Demos](https://github.com/NetCoreWebApps/blog/tree/master) helps learning how to make use of new features 
 as viewed in the context of a working example.
 
 [![](https://raw.githubusercontent.com/NetCoreApps/TemplatePages/master/src/wwwroot/assets/img/screenshots/blog.png)](http://blog.web-app.io)
@@ -2511,7 +2511,7 @@ as viewed in the context of a working example.
 
 ### Ultimate Simplicity
 
-The new [Blog App](https://github.com/NetCoreWebApps/Blog) is a ServiceStack [Web App](http://templates.servicestack.net/docs/web-apps) developed
+The new [Blog App](https://github.com/NetCoreWebApps/blog) is a ServiceStack [Web App](http://templates.servicestack.net/docs/web-apps) developed
 entirely using ServiceStack Templates which eliminates much of the complexity inherent in developing .NET Web Applications which by their nature 
 results in highly customizable Web Apps where their entire functionality can be modified in real-time whilst the App is running, that uses 
 syntax simple enough to be enhanced by non-developers like Designers and Content Creators courtesy of its approachable 
@@ -2526,11 +2526,11 @@ By contrast Web Apps require no development environment, no IDE's or build tools
 which can be modified in real-time by any text editor to instantly view changes as they're made. So Apps like 
 [redis.web-app.io](http://redis.web-app.io) which provide a rich Admin UI for searching, browsing and modifying Redis's core data structures, 
 can be easily enhanced by modifying a single 
-[index.html](https://github.com/NetCoreWebApps/Redis/blob/master/app/index.html) at the same time as using the App.
+[index.html](https://github.com/NetCoreWebApps/Redis/blob/master/index.html) at the same time as using the App.
 
 ### Minimal
 
-To maximize approachability, the [/Blog](https://github.com/NetCoreWebApps/Blog/tree/master/app) Web App has no C# source code, plugins and uses 
+To maximize approachability, the [/Blog](https://github.com/NetCoreWebApps/blog/tree/master) Web App has no C# source code, plugins and uses 
 no JavaScript or CSS frameworks. The development of which ended up being one of the most enjoyable experiences we've had in recent memory where
 all the usual complexities of developing a C# Server and modern JS App has been dispensed and you can just focus on the App you want to create,
 using a plain-text editor on the left, a live updating browser on the right and nothing else to interrupt your flow.
@@ -2543,7 +2543,7 @@ Any infrastructure dependencies have also been avoided by using SQLite by defaul
 
 Any number of users can Sign In via Twitter and publish content under their Twitter Username where only they'll be able to modify their own Content. 
 Setting up Twitter is as easy as it can be which just requires modifying the 
-[Twitter Auth Config in web.settings](#customizable-auth-providers) with the URL where the blog 
+[Twitter Auth Config in app.settings](#customizable-auth-providers) with the URL where the blog 
 is hosted and the OAuth Keys for the Twitter OAuth App created at [apps.twitter.com](https://apps.twitter.com).
 
 ### Rich Content
@@ -2585,7 +2585,7 @@ the database instead of `localStorage`.
 
 ### Server Validation
 
-The [new.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/new.html) and [edit.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/edit.html) pages shows examples of performing server validation with ServiceStack Templates:
+The [new.html](https://github.com/NetCoreWebApps/blog/blob/master/posts/new.html) and [edit.html](https://github.com/NetCoreWebApps/blog/blob/master/posts/_slug/edit.html) pages shows examples of performing server validation with ServiceStack Templates:
 
 ```hbs
 {% raw %}{{ assignErrorAndContinueExecuting: ex }}
@@ -2615,7 +2615,7 @@ should be rendered in, e.g:
 ```
 
 The implementation of which is surprisingly simple where the JavaScript snippet in 
-[default.js](https://github.com/NetCoreWebApps/Blog/blob/master/app/default.js) below is used to send its content on each change:
+[default.js](https://github.com/NetCoreWebApps/blog/blob/master/default.js) below is used to send its content on each change:
 
 ```js
 // Enable Live Preview of new Content
@@ -2645,7 +2645,7 @@ function livepreview(e) {
 }
 ```
 
-To the [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/preview.html) API Page which just renders and captures any 
+To the [/preview.html](https://github.com/NetCoreWebApps/blog/blob/master/preview.html) API Page which just renders and captures any 
 Template Content its sent and returns the output:
 
 ```hbs
@@ -2740,7 +2740,7 @@ JS keyword overrides for `htmlFor` and `className`, e.g:
   - `containsXss` 
 
 A greedy validation when needing to accept raw HTML but want to validate against embedded JavaScript, used in 
-[Blog content validation](https://github.com/NetCoreWebApps/Blog/blob/c656186cbae7c5f3c18ff4d4abfcd201858b0761/app/posts/_slug/edit.html#L26):
+[Blog content validation](https://github.com/NetCoreWebApps/blog/blob/c656186cbae7c5f3c18ff4d4abfcd201858b0761/app/posts/_slug/edit.html#L26):
 
 ```hbs
 {% raw %}{{ 'Potentially malicious characters detected' | onlyIf(containsXss(content)) | assignTo: contentError }}{% endraw %}
